<resources>
    <string name="app_name">Admin_PrecyApp</string>
    <string name="select_your_date">Select your date</string>
    <string name="customizeDateButton">Customize date using these button</string>
    <string name="not_available">select unavailable date and click this button</string>
    <string name="remove">to remove unavailable date</string>
    <string name="user_uid">User UID</string>
    <string name="company_name">Company Name</string>
    <string name="venue">Event Venue</string>
    <string name="package_a">Package A</string>
    <string name="food_no_1">Food No. 1</string>
    <string name="food_no_2">Food No. 2</string>
    <string name="food_no_3">Food No. 3</string>
    <string name="food_no_4">Food No. 4</string>
    <string name="p400_00">400.00</string>
    <string name="dashboard">Dashboard</string>
    <string name="reservation">Reservation</string>
    <string name="pending_reservation">Pending Reservation</string>
    <string name="approved_reservation">Approved Reservation</string>
    <string name="finished_reservation">Finished Reservation</string>
    <string name="cancelled_reservation">Cancelled Reservation</string>
    <string name="maintenance">Maintenance</string>
    <string name="report">Reports</string>
    <string name="admin">Admin</string>
    <string name="nav_drawer_open">Navigation Drawer Open</string>
    <string name="nav_drawer_close">Navigation Drawer Close</string>
    <string name="add_new_menu">Add new Menu</string>
    <string name="package_name">Enter Package Name</string>
    <string name="price">Price</string>
    <string name="view_food_package">View Food Package</string>
    <string name="approved">Approved</string>
    <string name="finished">Finished</string>
    <string name="finish">Finish</string>
    <string name="pending">Pending</string>
    <string name="payment">Payment</string>
    <string name="receipt">Receipt</string>
    <string name="gcash_number">Gcash Number</string>
    <string name="see_receipt">See Receipt</string>
</resources>