<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CustomizeCalender"
    android:background="@color/bgcolor">


    <TextView
        android:id="@+id/selectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/select_your_date"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <CalendarView
        android:id="@+id/myCalenderView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectDate"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/calender_bg" />

    <TextView
        android:id="@+id/customizeTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myCalenderView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/customizeDateButton"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/notavailTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customizeTxtView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/not_available"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/notavailable_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/customizeTxtView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="unavailable" />


    <TextView
        android:id="@+id/removeTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notavailable_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/remove"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/remove_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notavailable_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="remove" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notavailable_btn"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="70dp"
        android:text="select time" />

</RelativeLayout>






