<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/maintenance_drawerLayout"
    tools:context=".drawer.Maintenance"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/maintenanceNav_View"
        app:headerLayout="@layout/header_main_menu"
        app:menu="@menu/admin_main_menu"
        android:layout_gravity="start"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/maintenance_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00008577"
            android:transitionName=" "
            android:navigationIcon="@drawable/toolbaricon"
            />

        <LinearLayout
            android:id="@+id/maintenanceChoices_LinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/view_Btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/lightbrown"
                android:drawableStart="@drawable/ic_baseline_preview_24"
                android:text="@string/view_food_package"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addMenu_Btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/lightbrown"
                android:drawableStart="@drawable/ic_baseline_add_24"
                android:text="@string/add_new_menu"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/addMenu_FrameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/maintenanceChoices_LinearLayout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/packageName_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/custom_input"
                    android:hint="@string/package_name" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/next_Btn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/packageName_EditText"
                    android:background="@color/lightbrown"
                    android:layout_centerHorizontal="true"
                    android:text="Next"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </RelativeLayout>


        </FrameLayout>
    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>