<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">

           <androidx.cardview.widget.CardView
               android:id="@+id/approved_cardView"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="15dp"
               app:cardCornerRadius="10dp"
               app:cardBackgroundColor="@color/white"
               app:cardElevation="5dp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">


                   <TextView
                       android:id="@+id/dateofReservation_TxtView"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_alignParentLeft="true"
                       android:layout_marginLeft="20dp"
                       android:layout_marginTop="20dp"
                       android:text="Date" />

                   <TextView
                       android:id="@+id/timeofReservation_TxtView"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_below="@+id/dateofReservation_TxtView"
                       android:layout_marginLeft="20dp"
                       android:layout_marginTop="5dp"
                       android:text="Time" />

                   <androidx.cardview.widget.CardView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="15dp"
                       android:layout_marginTop="10dp"
                       app:cardBackgroundColor="@color/approvedbg"
                       app:cardCornerRadius="5dp"
                       app:cardElevation="5dp">

                       <RelativeLayout
                           android:layout_width="wrap_content"
                           android:layout_height="match_parent">

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:layout_centerInParent="true"
                               android:layout_marginStart="15dp"
                               android:layout_marginTop="15dp"
                               android:layout_marginEnd="15dp"
                               android:layout_marginBottom="15dp"
                               android:fontFamily="@font/catamaransemibold"
                               android:text="Reservation Approved"
                               android:textColor="@color/fontcolorapproved"
                               android:textSize="20sp" />
                       </RelativeLayout>

                   </androidx.cardview.widget.CardView>

                   <androidx.cardview.widget.CardView
                       android:id="@+id/reservationID_cardView"
                       android:layout_width="150dp"
                       android:layout_height="40dp"
                       android:layout_below="@+id/pending_cardView"
                       android:layout_marginLeft="15dp"
                       android:layout_marginTop="10dp"
                       app:cardBackgroundColor="@color/semibrown"
                       app:cardCornerRadius="5dp"
                       app:cardElevation="5dp">

                       <RelativeLayout
                           android:layout_width="143dp"
                           android:layout_height="match_parent">

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:layout_centerHorizontal="true"
                               android:layout_centerVertical="true"
                               android:fontFamily="@font/poppinsregular"
                               android:text="Reservation ID"
                               android:textColor="@color/white"
                               android:textSize="16sp" />
                       </RelativeLayout>

                   </androidx.cardview.widget.CardView>

                   <TextView
                       android:id="@+id/reservationID"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_below="@+id/pending_cardView"
                       android:layout_marginLeft="20dp"
                       android:layout_marginTop="14dp"
                       android:layout_toRightOf="@+id/reservationID_cardView"
                       android:text="2021-ABCDEFGE"
                       android:textColor="@color/black"
                       android:textIsSelectable="true"
                       android:textSize="20sp"
                       android:textStyle="bold" />


                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                       android:layout_marginTop="10dp"
                       android:text="@string/user_uid"
                       android:textColor="@color/black"
                       android:textSize="15sp"
                       android:textStyle="bold" />

                   <TextView
                       android:id="@+id/userUID"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                       android:text="UID"
                       android:textColor="@color/black"
                       android:textIsSelectable="true"
                       android:textSize="20sp" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                       android:layout_marginTop="10dp"
                       android:text="Name"
                       android:textColor="@color/black"
                       android:textSize="15sp"
                       android:textStyle="bold" />

                   <TextView
                       android:id="@+id/name"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"

                       android:text="Your name"
                       android:textColor="@color/black"
                       android:textSize="20sp" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                       android:layout_marginTop="20dp"
                       android:text="@string/company_name"
                       android:textColor="@color/black"
                       android:textSize="18sp"
                       android:textStyle="bold" />

                   <TextView
                       android:id="@+id/companyName"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="20dp"
                       android:layout_marginTop="5dp"
                       android:text="@string/company_name"
                       android:textColor="@color/black"
                       android:textSize="20sp" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                       android:layout_marginTop="10dp"
                       android:text="Mobile Number"
                       android:textColor="@color/black"
                       android:textSize="15sp"
                       android:textStyle="bold" />

                   <TextView
                       android:id="@+id/mobileNumber"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                       android:text="09XXXXXXXXX"
                       android:textColor="@color/black"
                       android:textSize="20sp" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                       android:layout_marginTop="10dp"
                       android:text="Event Date"
                       android:textColor="@color/black"
                       android:textSize="15sp"
                       android:textStyle="bold" />

                   <TextView
                       android:id="@+id/reservationDate"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="20dp"
                       android:text="January 07, 2001"
                       android:textColor="@color/black"
                       android:textSize="20sp" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="20dp"
                       android:layout_marginTop="20dp"
                       android:text="@string/venue"
                       android:textColor="@color/black"
                       android:textSize="18sp"
                       android:textStyle="bold" />

                   <TextView
                       android:id="@+id/venue"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="20dp"
                       android:layout_marginTop="5dp"
                       android:text="Address"
                       android:textColor="@color/black"
                       android:textSize="20sp" />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                       android:layout_marginTop="10dp"
                       android:text="Event"
                       android:textColor="@color/black"
                       android:textSize="15sp"
                       android:textStyle="bold" />

                   <TextView
                       android:id="@+id/event"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                       android:text="Birthday Event"
                       android:textColor="@color/black"
                       android:textSize="20sp" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                       android:layout_marginTop="10dp"
                       android:text="Number of People"
                       android:textColor="@color/black"
                       android:textSize="15sp"
                       android:textStyle="bold" />

                   <TextView
                       android:id="@+id/numofPeople"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                       android:text="20"
                       android:textColor="@color/black"
                       android:textSize="20sp"
                       android:layout_marginBottom="30dp"/>


               </LinearLayout>
           </androidx.cardview.widget.CardView>
       </LinearLayout>
   </ScrollView>

</RelativeLayout>